Added view, made minor changes to controllers and model

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,5 +21,7 @@
         <resource-env-ref-type>javax.sql.DataSource</resource-env-ref-type>
     </resource-env-ref>
 
-
+<!--    <listener>-->
+<!--        <listener-class>com.example.CourseWorkWithDB.Controllers.InitListener</listener-class>-->
+<!--    </listener>-->
 </web-app>
