--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 
     <display-name>Demo Project</display-name>
     <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
+<!--        <welcome-file>index.html</welcome-file>-->
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
