--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,21 @@
             <artifactId>hibernate-validator</artifactId>
             <version>6.0.3.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.tersesystems.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.36</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.9</version>
+        </dependency>
     </dependencies>
 
     <build>
