Edit package naming & logging and start readme implementation

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,6 @@
     </resource-env-ref>
 
 <!--    <listener>-->
-<!--        <listener-class>com.example.CourseWorkWithDB.Controllers.InitListener</listener-class>-->
+<!--        <listener-class>com.example.cw.controllers.InitListener</listener-class>-->
 <!--    </listener>-->
 </web-app>
